Arreglo Ruta de imagenes

--- a/infoDestino.html
+++ b/infoDestino.html
@@ -11,12 +11,12 @@
    <body>
       <div class="encabezado clearfix">
          <div class="encabezado-logo clearfix">
-             <img class="logo-tralapa" src="/img/logoHeader.png" alt="logo">
+             <img class="logo-tralapa" src="img/logoHeader.png" alt="logo">
          </div>
          <div class="encabezado-buscador clearfix">
              <input class="buscador-search" type="search" placeholder="Buscar">
-             <input class="buscador-submit" title="boton enviar" alt="boton enviar" src="/img/lupa.png" type="image" />
-             <img src="/img/usuario.png" alt="perfil">
+             <input class="buscador-submit" title="boton enviar" alt="boton enviar" src="img/lupa.png" type="image" />
+             <img src="img/usuario.png" alt="perfil">
          </div>
      </div>
       <div class="banner">
@@ -60,9 +60,9 @@
              <p>Andryk Lara - Stephanie Vega - Alex Guzmán - Gabriela Vargas</p>
          </div>
          <div class="imagenes-parque">
-             <img src="/img/parqueLalibertad.png" alt="">
+             <img src="img/parqueLalibertad.png" alt="">
          </div>
      </div>     
-      <script src="/js/infoDestino.js"></script>
+      <script src="js/infoDestino.js"></script>
    </body>
 </html>
