--- a/infoDestino.html
+++ b/infoDestino.html
@@ -31,19 +31,19 @@
          <div class="tabs-content">
             <div id="tab-1" class="tabs-content-item">
                <div class="info-text">
-                  Bali es el nombre tanto de una isla como el de una provincia de Indonesia. La provincia incluye la isla de Bali, Nusa Penida, Nusa Lembongan y Nusa Ceningan. Está localizada en la parte más occidental de las islas menores de la Sonda, junto con Java al oeste y Lombok al este. La isla es un popular destino turístico y es conocida, al igual que Java, por sus delicadas artes, que incluyen danza, escultura, pintura, orfebrería, peletería y un particular estilo musical, especialmente el interpretado durante el gamelan. Aparte de ser un destino turístico, es un punto de encuentro de mayoristas; moda, joyería, calzado, muebles o decoración de todo el mundo, que compran en la isla para exportar después a sus países de origen. Bali junto con Yakarta, la capital de Indonesia, ha sido sede del concurso Miss Mundo 2013.
+                  <strong>Bali</strong> es el nombre tanto de una isla como el de una provincia de Indonesia. La provincia incluye la isla de Bali, Nusa Penida, Nusa Lembongan y Nusa Ceningan. Está localizada en la parte más occidental de las islas menores de la Sonda, junto con Java al oeste y Lombok al este. La isla es un popular destino turístico y es conocida, al igual que Java, por sus delicadas artes, que incluyen danza, escultura, pintura, orfebrería, peletería y un particular estilo musical, especialmente el interpretado durante el gamelan. Aparte de ser un destino turístico, es un punto de encuentro de mayoristas; moda, joyería, calzado, muebles o decoración de todo el mundo, que compran en la isla para exportar después a sus países de origen. Bali junto con Yakarta, la capital de Indonesia, ha sido sede del concurso Miss Mundo 2013.
                </div>
                <br>
                <div id="img-grande">
-                  <img class="imagengrande" src="img/1.jpg">
+                  <img class="imagengrande" src="img/beach.jpg">
                </div>
                <div id="subimagen">
-                  <img class="img-small" alt="bali"src="img/1.jpg">
-                  <img class="img-small" alt="bali" src="img/2.jpg">
-                  <img class="img-small" alt="bali" src="img/3.jpg">
-                  <img class="img-small" alt="bali" src="img/4.jpg">
-                  <img class="img-small" alt="bali" src="img/5.jpg">
-                  <img class="img-small" alt="bali" src="img/6.jpg">
+                  <img class="img-small" alt="bali"src="img/beach.jpg">
+                  <img class="img-small" alt="bali" src="img/beach3.jpg">
+                  <img class="img-small" alt="bali" src="img/build.jpg">
+                  <img class="img-small" alt="bali" src="img/house.jpg">
+                  <img class="img-small" alt="bali" src="img/ruinas.jpg">
+                  <img class="img-small" alt="bali" src="img/beach1.jpg">
                </div>
             </div>
             <div id="tab-2" class="tabs-content-item">
