Agrego cambios a la descripción del  hotel

--- a/info-hotel.html
+++ b/info-hotel.html
@@ -42,7 +42,7 @@
             <p>
               Durante sus días en el hotel, los huéspedes podrán practicar todo tipo de actividades acuáticas y deportes al aire libre en las completas instalaciones. Además, el hotel cuenta con un amplio programa de entretenimiento para todas las edades y zonas infantiles para pasar unas vacaciones en familia inolvidables.
     
-            El Hotel los palotes Tambor es una estupenda opción si lo que se desea es relajarse y divertirse a la vez. Un hotel todo incluido creado para satisfacer las necesidades más exigentes.
+            El Hotel Alila Seminyak  es una estupenda opción si lo que se desea es relajarse y divertirse a la vez. Un hotel todo incluido creado para satisfacer las necesidades más exigentes.
             </p>
           <div class="hotel-info">
       <!--Descripción corta habitaciones-->
