--- a/html/InfoHoteles.html
+++ b/html/InfoHoteles.html
@@ -17,7 +17,7 @@
                 <div class="encabezado-buscador clearfix">
                     <input class="buscador-search" type="search" placeholder="Buscar">
                     <input class="buscador-submit" title="boton enviar" alt="boton enviar" src="../img/lupa.png" type="image" />
-                    <img src="../img/usuario.png" alt="Perfil">
+                    <img src="../img/usuario.png" alt="Perfil" class="usuario-encabezado">
                 </div>
             </div>
             <!-- Banner -->
@@ -34,40 +34,40 @@
             <br>
             <!--Alila Seminyak-->
             <div class="box1">
-                <img src="../img/Hotel_Bali1.PNG" alt="Alila Seminyak" class="img-hotel"> 
+                <a href="#"><img src="../img/Hotel_Bali1.PNG" alt="Alila Seminyak" class="img-hotel"></a>
                 <h2>Alila Seminyak</h2>
-                <img src="../img/Estrellas.png" alt="Stars" id="star1">
+                <a href="#"><img src="../img/Estrellas.png" alt="Stars" id="star1"></a>
                 <br>
-                <img src="../img/Location.png" alt="Location" class="location">
+                <a href="#"><img src="../img/Location.png" alt="Location" class="location"></a>
                 <h5>Petitenget, Seminyak</h4>
                 <p>A 2.5 km del Centro</p>
                 <p>Este complejo lujoso de 5 estrellas se encuentra en Seminyak, frente 
                     al mar. Cuenta con piscina al aire libre, spa y centro de fitness. 
                     Hay conexión WiFi gratuita en todas las instalaciones.
                 </p>
-                <button type="button" class="button">Saber más</button>
+                <a href="#"><button type="button" class="button">Saber más</button></a>
             </div>
             <!--Four Seasons Resort Bali at Jimbaran Bay-->
             <div class="box2">
-                <img src="../img/Hotel_Bali2.PNG" alt="Four Seasons Resort Bali at Jimbaran Bay" class="img-hotel">
+                <a href="#"><img src="../img/Hotel_Bali2.PNG" alt="Four Seasons Resort Bali at Jimbaran Bay" class="img-hotel"></a> 
                 <h2>Four Seasons Resort Bali at Jimbaran Bay</h2>
-                <img src="../img/Estrellas.png" alt="Stars" id="star2">
+                <a href="#"><img src="../img/Estrellas.png" alt="Stars" id="star2"></a>
                 <br>
-                <img src="../img/Location.png" alt="Location" class="location">
+                <a href="#"><img src="../img/Location.png" alt="Location" class="location"></a>
                 <h5>Bahia de Jimbaran, Jimbaran</h4>
                 <p>A 550 m del Centro</p>
                 <p>El Four Seasons Resort Bali at Jimbaran Bay está en un extremo de la bahía de Jimbaran 
                     y tiene una piscina al aire libre con vistas impresionantes al océano Índico.
                 </p>
-                <button type="button" class="button">Saber más</button>
+                <a href="#"><button type="button" class="button">Saber más</button></a>
             </div>
             <!--The Kayon Jungle Resort by Pramana-->
             <div class="box3">
-                <img src="../img/Hotel_Bali3.PNG" alt="The Kayon Jungle Resort by Pramana" class="img-hotel">
+                <a href="#"><img src="../img/Hotel_Bali3.PNG" alt="The Kayon Jungle Resort by Pramana" class="img-hotel"></a>
                 <h2>The Kayon Jungle Resort by Pramana</h2>
-                <img src="../img/Estrellas.png" alt="Stars" id="star3">
+                <a href="#"><img src="../img/Estrellas.png" alt="Stars" id="star3"></a>
                 <br>
-                <img src="../img/Location.png" alt="Location" class="location">
+                <a href="#"><img src="../img/Location.png" alt="Location" class="location"></a>
                 <h5>Udub</h5>
                 <p>A 9 km del Centro</p>
                 <p>El The Kayon Jungle Resort está ubicado entre la vegetación tropical de Ubud y 
@@ -76,9 +76,9 @@
                 <p class="reservation">
                     Reservado 4 veces en las 12 últimas horas
                 </p>
-                <button type="button" id="button-sabermas">Saber más</button>
+                <a href="#"><button type="button" id="button-sabermas">Saber más</button></a>
             </div>
-            <button type="button" id="button-sabermashoteles">Buscar más hoteles</button>
+            <a href="#"><button type="button" id="button-sabermashoteles">Buscar más hoteles</button></a>
             <br><br><br><br>
             <!-- Footer -->
             <div class="footer">
@@ -87,7 +87,7 @@
                     <p>Andryk Lara - Stephanie Vega - Alex Guzmán - Gabriela Vargas</p>
                 </div>
                 <div class="imagenes-parque">
-                    <img src="../img/parqueLalibertad.png" alt="Parque La Libertad">
+                    <a href="#"><img src="../img/parqueLalibertad.png" alt="Parque La Libertad"></a>
                 </div>
             </div>
         </div>
