Agrego ultimos detalles

--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
             <div class="encabezado-buscador clearfix">
                 <input class="buscador-search" type="search" placeholder="Buscar">
                 <input class="buscador-submit" title="boton enviar" alt="boton enviar" src="/img/lupa.png" type="image" />
-                <img src="/img/usuario.png" alt="perfil">
+                <img class="usuario-encabezado" src="/img/usuario.png" alt="perfil">
             </div>
         </div>
         <div class="encabezado-banner clearfix">
