Agrego solución a errores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- ENCABEZADO -->
         <div class="encabezado clearfix">
             <div class="encabezado-logo clearfix">
-                <a href="/homepage.html"><img class="logo-tralapa" src="img/logoHeader.png" alt="logo"></a>
+                <a href="/index.html"><img class="logo-tralapa" src="img/logoHeader.png" alt="logo"></a>
             </div>
             <div class="encabezado-buscador clearfix">
                 <input class="buscador-search" type="search" placeholder="Buscar">
