--- a/info-hotel.html
+++ b/info-hotel.html
@@ -12,7 +12,7 @@
   <!--Header-->
     <div class="encabezado clearfix">
       <div class="encabezado-logo clearfix">
-        <a href="/homepage.html"><img class="logo-tralapa" src="img/logoHeader.png" alt="logo"></a>
+        <a href="/index.html"><img class="logo-tralapa" src="img/logoHeader.png" alt="logo"></a>
       </div>
       <div class="encabezado-buscador clearfix">
           <input class="buscador-search" type="search" placeholder="Buscar">
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="navegation">
-      <span class="ubicacion-pagina clearfix"><a href="/homepage.html"><p>Inicio &#62 </p></a><a href="/infoDestino.html"><p>Destinos &#62</p></a><a href="/info-hotel.html "><p>Hoteles &#62</p></a><a href="#"><p class="active">Alila Seminyak</p></a></span>
+      <span class="ubicacion-pagina clearfix"><a href="/index.html"><p>Inicio &#62 </p></a><a href="/infoDestino.html"><p>Destinos &#62</p></a><a href="/info-hotel.html "><p>Hoteles &#62</p></a><a href="#"><p class="active">Alila Seminyak</p></a></span>
     </div>
     <!--Contenido tabs-->
     <div class="tabs">
