--- a/infoDestino.html
+++ b/infoDestino.html
@@ -11,7 +11,7 @@
    <body>
       <div class="encabezado clearfix">
          <div class="encabezado-logo clearfix">
-             <img class="logo-tralapa" src="/img/logoHeader.png" alt="logo">
+             <a href="/index.html"><img  class="logo-tralapa" src="/img/logoHeader.png" alt="logo"></a>
          </div>
          <div class="encabezado-buscador clearfix">
              <input class="buscador-search" type="search" placeholder="Buscar">
@@ -22,7 +22,7 @@
       <div class="banner">
       </div>
       <div class="navegation">
-        <span class="ubicacion-pagina clearfix"><a href="/homepage.html"><p>Inicio &#62 </p></a><a href="#"><p>Info Destinos y Hoteles</p></a></span>
+        <span class="ubicacion-pagina clearfix"><a href="/index.html"><p>Inicio &#62 </p></a><a href="#"><p>Info Destinos y Hoteles</p></a></span>
       </div>
       <br>
       <h1>Bali</h1>
