Agrego solucion de errores en index

--- a/index.html
+++ b/index.html
@@ -14,52 +14,52 @@
         <!-- ENCABEZADO -->
         <div class="encabezado clearfix">
             <div class="encabezado-logo clearfix">
-                <a href="/index.html"><img class="logo-tralapa" src="img/logoHeader.png" alt="logo"></a>
+                <a href="index.html"><img class="logo-tralapa" src="img/logoHeader.png" alt="logo"></a>
             </div>
             <div class="encabezado-buscador clearfix">
                 <input class="buscador-search" type="search" placeholder="Buscar">
-                <input class="buscador-submit" title="boton enviar" alt="boton enviar" src="/img/lupa.png" type="image" />
+                <input class="buscador-submit" title="boton enviar" alt="boton enviar" src="img/lupa.png" type="image" />
                 <img class="usuario-encabezado" src="img/usuario.png" alt="perfil">
             </div>
         </div>
         <div class="encabezado-banner clearfix">
-            <img src="/img/banner-atardecer.jpg" alt="">
+            <img src="img/banner-atardecer.jpg" alt="">
         </div>
         <span class="ubicacion-pagina"><a href="#"><p>Inicio</p></a></span>
         <!-- CONTENIDO DE DESTINOS -->
         <div class="destinos clearfix">
             <div class="contenedor-destinos caja">
-                <a href="/infoDestino.html"><img src="/img/homepage-bali.jpg" alt="imagen de bali"></a>
-                <a href="/infoDestino.html"><p class="nombres-destinos">Bali</p></a>
+                <a href="infoDestino.html"><img src="img/homepage-bali.jpg" alt="imagen de bali"></a>
+                <a href="infoDestino.html"><p class="nombres-destinos">Bali</p></a>
             </div>
             <div class="contenedor-destinos caja">
-                <a href="#"><img src="/img/homepage-tamarindo.jpg" alt=""></a>
+                <a href="#"><img src="img/homepage-tamarindo.jpg" alt=""></a>
                 <a href="#"><p class="nombres-destinos">Tamarindo</p></a>
             </div>
             <div class="información-destinos clearfix">
-                <img class="ubicacion-destinos" src="/img/marcador-de-posicion.png" alt="icono de ubicacion">
+                <img class="ubicacion-destinos" src="img/marcador-de-posicion.png" alt="icono de ubicacion">
                 <h3>Indonesia</h3>
                 <div class="estrellas-destinos clearfix">
-                    <img src="/img/estrella-rellenada.png" alt="estrella rellenada">
-                    <img src="/img/estrella-rellenada.png" alt="estrella rellenada">
-                    <img src="/img/estrella-rellenada.png" alt="estrella rellenada">
-                    <img src="/img/estrella-rellenada.png" alt="estrella rellenada">
-                    <img src="/img/estrella-sinRellenar.png" alt="estrella sin rellenar">
+                    <img src="img/estrella-rellenada.png" alt="estrella rellenada">
+                    <img src="img/estrella-rellenada.png" alt="estrella rellenada">
+                    <img src="img/estrella-rellenada.png" alt="estrella rellenada">
+                    <img src="img/estrella-rellenada.png" alt="estrella rellenada">
+                    <img src="img/estrella-sinRellenar.png" alt="estrella sin rellenar">
                 </div>
                 <div class="descripcion-destino clearfix">
                     <p>Bali es una isla de Indonesia conocida por sus frondosas montañas volcánicas, los icónicos arrozales, las playas y los arrecifes de coral. La isla alberga sitios religiosos, como el templo Uluwatu en un acantilado.</p>
-                    <a class="error-boton" href="/infoDestino.html">Ver más</a>
+                    <a class="error-boton" href="infoDestino.html">Ver más</a>
                 </div>
             </div>
             <div class="información-destinos clearfix">
-                <img class="ubicacion-destinos" src="/img/marcador-de-posicion.png" alt="icono de ubicacion">
+                <img class="ubicacion-destinos" src="img/marcador-de-posicion.png" alt="icono de ubicacion">
                 <h3>Costa Rica</h3>
                 <div class="estrellas-destinos clearfix">
-                    <img src="/img/estrella-rellenada.png" alt="estrella rellenada">
-                    <img src="/img/estrella-rellenada.png" alt="estrella rellenada">
-                    <img src="/img/estrella-rellenada.png" alt="estrella rellenada">
-                    <img src="/img/estrella-rellenada.png" alt="estrella rellenada">
-                    <img src="/img/estrella-sinRellenar.png" alt="estrella sin rellenar">
+                    <img src="img/estrella-rellenada.png" alt="estrella rellenada">
+                    <img src="img/estrella-rellenada.png" alt="estrella rellenada">
+                    <img src="img/estrella-rellenada.png" alt="estrella rellenada">
+                    <img src="img/estrella-rellenada.png" alt="estrella rellenada">
+                    <img src="img/estrella-sinRellenar.png" alt="estrella sin rellenar">
                 </div>
                 <div class="descripcion-destino clearfix">
                     <p>Playa muy popular y de gran belleza ubicada en Santa Cruz de Guanacaste, Costa Rica. Combina la arena blanca, con buenas olas para el surf, y un paisaje increíble rodeado de montañas.</p>
@@ -70,10 +70,10 @@
         <div class="footer">
             <div class="informacion-footer">
                 <p>Copyright Parque La Libertad</p>
-                <p>Andryk Lara - Stephanie Vega - Alex Guzmán - Gabriela Vargas</p>
+                <p>Andryk Lara - Stephanie Vega - Alex Guzman - Gabriela Vargas</p>
             </div>
             <div class="imagenes-parque">
-                <a href="https://parquelalibertad.org/"><img src="/img/parqueLalibertad.png" alt=""></a>
+                <a href="https://parquelalibertad.org/"><img src="img/parqueLalibertad.png" alt=""></a>
             </div>
         </div>
     </div>
