--- a/infoDestino.html
+++ b/infoDestino.html
@@ -11,18 +11,18 @@
    <body>
       <div class="encabezado clearfix">
          <div class="encabezado-logo clearfix">
-             <a href="/index.html"><img  class="logo-tralapa" src="/img/logoHeader.png" alt="logo"></a>
+             <a href="index.html"><img  class="logo-tralapa" src="img/logoHeader.png" alt="logo"></a>
          </div>
          <div class="encabezado-buscador clearfix">
              <input class="buscador-search" type="search" placeholder="Buscar">
-             <input class="buscador-submit" title="boton enviar" alt="boton enviar" src="/img/lupa.png" type="image" />
-             <img class="usuario-encabezado" src="/img/usuario.png" alt="perfil">
+             <input class="buscador-submit" title="boton enviar" alt="boton enviar" src="img/lupa.png" type="image" />
+             <img class="usuario-encabezado" src="img/usuario.png" alt="perfil">
          </div>
      </div>
       <div class="banner">
       </div>
       <div class="navegation">
-        <span class="ubicacion-pagina clearfix"><a href="/index.html"><p>Inicio &#62 </p></a><a href="#"><p>Info Destinos y Hoteles</p></a></span>
+        <span class="ubicacion-pagina clearfix"><a href="index.html"><p>Inicio &#62 </p></a><a href="#"><p>Info Destinos y Hoteles</p></a></span>
       </div>
       <br>
       <h1>Bali</h1>
@@ -51,11 +51,11 @@
             </div>
             <div id="tab-2" class="tabs-content-item">
               <div class="box1">
-                <a href="/info-hotel.html"><img src="../img/Hotel_Bali1.PNG" alt="Alila Seminyak" class="img-hotel"></a>
+                <a href="info-hotel.html"><img src="img/Hotel_Bali1.PNG" alt="Alila Seminyak" class="img-hotel"></a>
                 <h2>Alila Seminyak</h2>
-                <a href="#"><img src="../img/Estrellas.png" alt="Stars" id="star1"></a>
+                <a href="#"><img src="img/Estrellas.png" alt="Stars" id="star1"></a>
                 <br>
-                <a href="#"><img src="../img/Location.png" alt="Location" class="location"></a>
+                <a href="#"><img src="img/Location.png" alt="Location" class="location"></a>
                 <h5>Petitenget, Seminyak</h4>
                 <p>A 2.5 km del Centro</p>
                 <p>Este complejo lujoso de 5 estrellas se encuentra en Seminyak, frente
@@ -66,25 +66,25 @@
             </div>
             <!--Four Seasons Resort Bali at Jimbaran Bay-->
             <div class="box2">
-                <a href="/info-hotel.html"><img src="../img/Hotel_Bali2.PNG" alt="Four Seasons Resort Bali at Jimbaran Bay" class="img-hotel"></a>
+                <a href="info-hotel.html"><img src="img/Hotel_Bali2.PNG" alt="Four Seasons Resort Bali at Jimbaran Bay" class="img-hotel"></a>
                 <h2>Four Seasons Resort Bali at Jimbaran Bay</h2>
-                <a href="#"><img src="../img/Estrellas.png" alt="Stars" id="star2"></a>
+                <a href="#"><img src="img/Estrellas.png" alt="Stars" id="star2"></a>
                 <br>
-                <a href="#"><img src="../img/Location.png" alt="Location" class="location"></a>
+                <a href="#"><img src="img/Location.png" alt="Location" class="location"></a>
                 <h5>Bahia de Jimbaran, Jimbaran</h4>
                 <p>A 550 m del Centro</p>
                 <p>El Four Seasons Resort Bali at Jimbaran Bay está en un extremo de la bahía de Jimbaran
                     y tiene una piscina al aire libre con vistas impresionantes al océano Índico.
                 </p>
-                <a href="/info-hotel.html"><button type="button" class="button">Saber más</button></a>
+                <a href="info-hotel.html"><button type="button" class="button">Saber más</button></a>
             </div>
             <!--The Kayon Jungle Resort by Pramana-->
             <div class="box3">
-                <a href="#"><img src="../img/Hotel_Bali3.PNG" alt="The Kayon Jungle Resort by Pramana" class="img-hotel"></a>
+                <a href="#"><img src="img/Hotel_Bali3.PNG" alt="The Kayon Jungle Resort by Pramana" class="img-hotel"></a>
                 <h2>The Kayon Jungle Resort by Pramana</h2>
-                <a href="#"><img src="../img/Estrellas.png" alt="Stars" id="star3"></a>
+                <a href="#"><img src="img/Estrellas.png" alt="Stars" id="star3"></a>
                 <br>
-                <a href="#"><img src="../img/Location.png" alt="Location" class="location"></a>
+                <a href="#"><img src="img/Location.png" alt="Location" class="location"></a>
                 <h5>Udub</h5>
                 <p>A 9 km del Centro</p>
                 <p>El The Kayon Jungle Resort está ubicado entre la vegetación tropical de Ubud y
@@ -105,9 +105,9 @@
              <p>Andryk Lara - Stephanie Vega - Alex Guzmán - Gabriela Vargas</p>
          </div>
          <div class="imagenes-parque">
-             <img src="/img/parqueLalibertad.png" alt="">
+             <img src="img/parqueLalibertad.png" alt="">
          </div>
      </div>
-      <script src="/js/infoDestino.js"></script>
+      <script src="js/infoDestino.js"></script>
    </body>
 </html>
